# Fatum

./: Cargo.toml  LICENSE.md  README.md  configuration.yaml
migrations/: 20250324100541_create_account_table.sql  20250420105504_create_users.sql  20250420105537_alter_accounts_add_user_id_fk.sql  20250420105718_create_user_charms.sql  20250420105857_create_user_tags.sql  20250420110012_create_user_titles.sql  20250420110050_create_journey_entries.sql  20250420110141_create_quests.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/authentication/: change_password.rs  credentials.rs  middleware.rs  mod.rs  token.rs
src/routes/: health.rs  health_check.rs  login.rs  mod.rs
src/routes/auth/: mod.rs  password.rs  tokens.rs
src/utils/: account_email.rs  hmac_secret.rs  mod.rs  user_id.rs
tests/: health_check.rs
tests/api/: health.rs  health_check.rs  helpers.rs  login.rs  main.rs
tests/api/auth/: mod.rs  password.rs  token.rs
