[package]
name = "fatum-api-rs"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fatum-api-rs"

[dependencies]
axum = "0.8.1"
config = "0.15.11"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.12.12"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]